--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -61,11 +61,11 @@
   vertical-align: middle;
 }
 
-hr {
-  color: #888888;
-  background-color: #888888;
-  height: .5px;
-}
+// hr {
+//   color: #888888;
+//   background-color: #888888;
+//   height: .5px;
+// }
 
 .centered {
   text-align: center;
