--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -122,8 +122,8 @@ $transparentWhite : rgba(255, 255, 255, 0.08);
 
 /*--- Accents ---*/
 $floatingShadow:
-  0px 2px 4px 0px rgba(34, 36, 38, 0.12),
-  0px 2px 10px 0px rgba(34, 36, 38, 0.15)
+   0 15px 35px rgba(50,50,93,.1), 
+   0 5px 15px rgba(0,0,0,.07);
 ;
 
 
@@ -173,7 +173,7 @@ $textColor           : rgba(0, 0, 0, 0.7);
 ---------------*/
 $h1 : 4rem;;
 $h2 : 3rem;
-$h3 : 2rem;
+$h3 : 2.3rem;
 $h4 : 1.7rem;
 $h5 : 1.5rem;
 
@@ -225,7 +225,7 @@ $defaultBorderRadius: 0.3rem;
 /*-------------------
       Borders
 --------------------*/
-$borderColor           : rgba(151, 151, 151, 0.4);
+$borderColor           : rgba(151, 151, 151, 0.2);
 $internalBorderColor   : rgba(34, 36, 38, 0.1);
 $solidBorderColor      : #D4D4D5;
 $whiteBorderColor      : rgba(255, 255, 255, 0.1);
