[SAM-9076] Move matching requirements radio buttons under matching label

--- a/src/app/assistance-listing/components/formula-matching/formula-matching.template.html
+++ b/src/app/assistance-listing/components/formula-matching/formula-matching.template.html
@@ -54,14 +54,14 @@
                    [formControlName]="'additionalInfo'"
       ></samTextArea>
 
-      <samRadioButton [name]="name + '-matching-radio-buttons'"
+      <samRadioButton [label]="'Matching Requirements'"
+                      [name]="name + '-matching-radio-buttons'"
                       [options]="matchingRequirementsOptions"
                       [hidden]="model.checkbox.indexOf('matching') === -1"
                       [formControlName]="'matchingRequirements'"
       ></samRadioButton>
 
-      <samSelect [label]="'Matching Requirements'"
-                 [hint]="'Select the Percentage Below'"
+      <samSelect [hint]="'Select the Percentage Below'"
                  [name]="name + '-matching-requirements-percentage'"
                  [options]="matchingPercentageOptions"
                  [required]="false"
