--- a/src/app/role-management/rolemgmt-workspace.page.html
+++ b/src/app/role-management/rolemgmt-workspace.page.html
@@ -11,6 +11,9 @@
     <rolemgmt-content
       (sortOrder) = "SortValue($event)"
       (pageNumber) = "PageValue($event)"
+      [requestDetails] = "Details" 
+      [count] = "totalRequest"
+      [currCount] = "currCount"
     >
     </rolemgmt-content>
   </div>
