--- a/src/app/organization-detail/profile/profile.template.html
+++ b/src/app/organization-detail/profile/profile.template.html
@@ -23,7 +23,7 @@
     <!-- Detail Section-->
     <div class="usa-width-one-whole m_T-4x">
       <h3>{{currentHierarchyType}} Detail
-        <button class="usa-button-transparent pull-right m_0 p_T-0" (click)="onEditPageClick()" *ngIf="!isEdit"><i class="fa fa-pencil"></i></button>
+        <button class="usa-button-transparent pull-right m_0 p_T-0" (click)="onEditPageClick()" *ngIf="!isEdit && isCFDASource"><i class="fa fa-pencil"></i></button>
         <button class="usa-button-transparent pull-right m_0 p_T-0 " (click)="onCancelEditPageClick()" *ngIf="isEdit"> <i class="fa fa-times"></i></button>
         <button class="usa-button-transparent pull-right m_0 p_T-0" (click)="onSaveEditPageClick()" *ngIf="isEdit"> <i class="fa fa-save"></i></button>
       </h3>
