added classes for awards fields

--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -160,13 +160,13 @@
             (modelChange)="awardIDVRadChanged($event)">
           </samRadioButton>
           <br/>
-          <sam-contract-type-filter class="usa-award-radio"
+          <sam-contract-type-filter class="usa-award-radio award-type-dropdown-list"
                                     [selectModel]="awardTypeModel"
                                     [options]="awardType"
                                     (modelChange)="awardTypeSelected($event)">
           </sam-contract-type-filter>
           <br/>
-          <sam-contract-type-filter class="usa-award-radio"
+          <sam-contract-type-filter class="usa-award-radio contract-type-dropdown-list"
                                     [selectModel]="contractTypeModel"
                                     [options]="contractType"
                                     (modelChange)="contractTypeSelected($event)">
