--- a/src/app/Help/sections/new-to-sam/new-to-sam.template.html
+++ b/src/app/Help/sections/new-to-sam/new-to-sam.template.html
@@ -65,7 +65,7 @@
       </p>
     </div>
     <div class="usa-grid-full m_T-4x">
-      <imageLibrary [name]="'new-to-sam-'" [data]="curImageGroup" [showDetailTitle]="false" [isExternalLink]="false"></imageLibrary>
+      <sam-info-accordion [name]="'new-to-sam-'" [data]="curImageGroup" [showDetailTitle]="false" [isExternalLink]="false"></sam-info-accordion>
     </div>
 
   </div>
