--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -593,9 +593,9 @@
   </div>
 
   <div class="usa-grid relative">
-    <h2 class="usa-grid-full">Image Library Component &lt;imageLibrary&gt;</h2>
+    <h2 class="usa-grid-full">Info Accordion Component &lt;sam-info-accordion&gt;</h2>
     <div class="usa-grid-full">
-      <imageLibrary [name]="'ImageLibrarySample'" [data]="imageLibraryData"></imageLibrary>
+      <sam-info-accordion [name]="'ImageLibrarySample'" [data]="imageLibraryData"></sam-info-accordion>
     </div>
   </div>
 
