--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -141,6 +141,7 @@ home samsearchbar{
 @import 'components/header';
 @import 'components/header-links';
 @import 'components/header-menu';
+@import 'components/info-accordion';
 @import 'components/agency-picker';
 @import 'components/input';
 @import 'components/multiselect';
