--- a/src/app/Help/sections/partners/partners.template.html
+++ b/src/app/Help/sections/partners/partners.template.html
@@ -2,7 +2,7 @@
   <h2 class="m_T-2x">External Partners</h2>
   <h3 id="featuredPartners" class="p_L-3x">Featured Partners</h3>
   <div class="usa-grid m_T-4x m_L-3x">
-    <imageLibrary [name]="'external-partners'" [data]="data" [hasLayer]="false"></imageLibrary>
+    <sam-info-accordion [name]="'external-partners'" [data]="data" [hasLayer]="false"></sam-info-accordion>
   </div>
   <h3 id="additionalPartners" class="p_L-3x">Additional Partners</h3>
   <div class="usa-grid-full">
