--- a/src/app/assistance-listing/assistance-listing-operations/sections/criteria-information/criteria-information.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/criteria-information/criteria-information.template.html
@@ -101,10 +101,10 @@
   <samCheckboxToggledTextarea class = "toggle-text-checkbox" [options]="useResConfig"
                               [formControlName]="'usageRes'" [textareaLabel] = "['Please describe']"
   ></samCheckboxToggledTextarea>
-  <samCheckboxToggledTextarea [options]="useDisFundsConfig"
+  <samCheckboxToggledTextarea class = "toggle-text-checkbox" [options]="useDisFundsConfig"
                               [formControlName]="'useDisFunds'" [textareaLabel] = "['Please describe']"
   ></samCheckboxToggledTextarea>
-  <samCheckboxToggledTextarea [options]="useLoanTermsConfig"
+  <samCheckboxToggledTextarea class = "toggle-text-checkbox" [options]="useLoanTermsConfig"
                               [formControlName]="'useLoanTerms'" [textareaLabel] = "['Please describe']"
   ></samCheckboxToggledTextarea>
   <div class="pull-left">
