--- a/src/styles/pages/_assistance-listing-operations.scss
+++ b/src/styles/pages/_assistance-listing-operations.scss
@@ -42,8 +42,8 @@
     float: left;
     padding: 12px 5px;
   }
-  .toggle-text-checkbox .label {
-    display: inline;
+  .toggle-text-checkbox .label-wrapper label {
+    margin-top: 0;
   }
   .fal-obligations-label {
     font-weight: bold;
