wip: show alert to notice org created

--- a/src/styles/pages/_organization-detail.scss
+++ b/src/styles/pages/_organization-detail.scss
@@ -38,4 +38,11 @@
   .org-detail-expand-link:hover{
     cursor: pointer;
   }
+
+  .org-detail-alert-message{
+    position:absolute;
+    width: 450px;
+    left:10%;
+    top:30%;
+  }
 }
