--- a/src/app/organization-detail/profile/profile.template.html
+++ b/src/app/organization-detail/profile/profile.template.html
@@ -1,4 +1,4 @@
-<div class="usa-width-one-whole organization-profile">
+<div class="usa-width-one-whole organization-profile relative">
   <div class="usa-width-one-whole" *ngIf="isDataAvailable">
 
     <div class="org-notification p_T-4x m_B-6x ">&nbsp;
@@ -55,4 +55,8 @@
       </div>
     </div>
   </div>
+
+  <samAlert class="org-detail-alert-message" (dismiss)="dismissCreateOrgFlashAlert()" [showClose]="true" [type]="'success'" [title]="'Success'" [description]="'New Office Created - '+ orgObj.name" *ngIf="flashMsgService.isCreateOrgSuccess && flashMsgService.isFlashMsgShow" ></samAlert>
+  <samAlert class="org-detail-alert-message" (dismiss)="dismissEditOrgFlashAlert()" [showClose]="true" [type]="'success'" [title]="'Success'" [description]="'Your edits have been saved'" *ngIf="showEditOrgFlashAlert" ></samAlert>
+
 </div>
