--- a/src/styles/components/role-management/_role-sidenav.scss
+++ b/src/styles/components/role-management/_role-sidenav.scss
@@ -26,8 +26,8 @@
   }
   .tx-pad .btn-plus-error {
     position: absolute;
-    top: 1.9em;
-    left: 11.5em;
+    top: 2.0em;
+    right: 3.5em;
     font-size: 1.5em;
   }
 }
