--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -115,6 +115,10 @@ home samsearchbar{
   @include unstyled-list;
 }
 
+samsearchheader .search-header > .usa-width-one-whole{
+  height: 40px;
+}
+
 /*******************************
         Legacy 
 *******************************/
@@ -189,12 +193,12 @@ home samsearchbar{
 @import 'pages/organization-detail';
 @import 'pages/organization-create';
 
-h1,
-h2{
-  letter-spacing: -0.5px;
-  line-height: 1.1;
-  color: black;
-}
+// h1,
+// h2{
+//   letter-spacing: -0.5px;
+//   line-height: 1.1;
+//   color: black;
+// }
 
 /* Let content occupy most of the page and show footer when scroll down*/
 .occupy-page{
