--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -160,13 +160,13 @@
             (modelChange)="awardIDVRadChanged($event)">
           </samRadioButton>
           <br/>
-          <sam-contract-type-filter class="usa-award-radio"
+          <sam-contract-type-filter class="usa-award-filter"
                                     [selectModel]="awardTypeModel"
                                     [options]="awardType"
                                     (modelChange)="awardTypeSelected($event)">
           </sam-contract-type-filter>
           <br/>
-          <sam-contract-type-filter class="usa-award-radio"
+          <sam-contract-type-filter class="usa-award-filter"
                                     [selectModel]="contractTypeModel"
                                     [options]="contractType"
                                     (modelChange)="contractTypeSelected($event)">
@@ -176,7 +176,7 @@
 
         <!--NAICS - PSC Filters-->
         <sam-collapsible [label]="'Service Classifications'" [startOpened]="true" *ngIf="index==='fpds' || index === 'opp' || index === 'ent'">
-          <sam-naics-psc-filter class="usa-award-radio"
+          <sam-naics-psc-filter class="usa-award-filter"
                                 [selectModel1]="naicsTypeModel"
                                 [options1]="naicsType"
                                 (modelChange1)="naicsTypeSelected($event)">
