--- a/src/app/role-management/rolemgmt-workspace.page.html
+++ b/src/app/role-management/rolemgmt-workspace.page.html
@@ -14,6 +14,7 @@
       [requestDetails] = "Details" 
       [count] = "totalRequest"
       [currCount] = "currCount"
+      [totalPages] = "pages"
     >
     </rolemgmt-content>
   </div>
