--- a/src/app/role-management/rolemgmt-sidenav/rolemgmt-sidenav.template.html
+++ b/src/app/role-management/rolemgmt-sidenav/rolemgmt-sidenav.template.html
@@ -16,7 +16,7 @@
     <div class = "pull-right filter-icon filter-color">
       <i class="fa fa-sliders fa-2x" aria-hidden="true"></i>
     </div>
-    <div class = "def-filter">
+    <div>
       <sam-autocomplete
         name="'users-search'"
         [options]="requestorIds"
