all fixes to workspace

--- a/src/app/role-management/rolemgmt-workspace.page.html
+++ b/src/app/role-management/rolemgmt-workspace.page.html
@@ -15,6 +15,7 @@
       [count] = "totalRequest"
       [currCount] = "currCount"
       [totalPages] = "pages"
+      [currPage] = "page"
     >
     </rolemgmt-content>
   </div>
