was always deleting the first requests regardless of which was clicked

--- a/src/app/users/public/access/access.template.html
+++ b/src/app/users/public/access/access.template.html
@@ -27,7 +27,7 @@
 
           <!-- Cancel -->
           <div class="usa-width-one-sixth clearfix">
-            <button class="usa-button-transparent pull-right" (click)="onCancelRequestClick(req.id)">
+            <button class="usa-button-transparent pull-right" (click)="onCancelRequestClick(req.id, i)">
               <a class="no-underline"><i class="fa fa-close"></i>&nbsp;Cancel</a>
             </button>
           </div>
