--- a/src/styles/sam-ui/elements/_segment.scss
+++ b/src/styles/sam-ui/elements/_segment.scss
@@ -9,7 +9,7 @@
 
 $background: $white;
 $borderWidth: 1px;
-$border: $borderWidth solid $borderColor;
+$border: $borderWidth solid rgba(151, 151, 151, 0.2);
 
 $boxShadow: none; //$subtleShadow
 $verticalPadding: 1em;
