--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -11,14 +11,14 @@
 .usa-footer-nav ul {
   max-width: 100%;
 }
-
-h1 {
-  color: $iae-color-primary;
-}
-
-h2 {
-  color: $iae-color-primary-alt;
-}
+// 
+// h1 {
+//   color: $iae-color-primary;
+// }
+// 
+// h2 {
+//   color: $iae-color-primary-alt;
+// }
 
 blockquote {
   border-left: solid 4px $iae-color-gray;
