--- a/src/app/entity/entity-object-view.page.html
+++ b/src/app/entity/entity-object-view.page.html
@@ -24,7 +24,7 @@
 			<h1>{{coreData.legalBusinessName}}</h1>
 			
 			
-			<div class="sam-ui raised segment">
+			<div class="sam-ui padded raised segment">
 				<div class="sam-ui top right attached mini label">
 					Entity
 				</div>
