--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -21,41 +21,81 @@
 
   <!--Main Content-->
   <div class="usa-width-three-fourths" *ngIf="opportunity">
+    
     <ng-container *ngIf="alert.length > 0">
       <samAlert *ngFor="let alert of alert" [type]="alert.config.type" [title]="alert.config.title"><div [innerHTML]="alert.config.description"></div></samAlert>
     </ng-container>
 
     <section [attr.id]="generateID(opportunityFields.Header)" *ngIf="shouldBeDisplayed(opportunityFields.Header)">
+      
       <h1 [attr.id]="generateID(opportunityFields.Title, 'header')" *ngIf="shouldBeDisplayed(opportunityFields.Title)">
         {{ opportunity.data?.title }}
       </h1>
-
-      <ul class="usa-unstyled-list">
-        <li [attr.id]="generateID(opportunityFields.Solicitation, 'header')" *ngIf="shouldBeDisplayed(opportunityFields.Solicitation)">
-          <strong>Solicitation Number: </strong>{{ opportunity.data?.solicitationNumber }}
-        </li>
-        <li [attr.id]="generateID(opportunityFields.HierarchyName, 'header')" *ngIf="organization && shouldBeDisplayed(opportunityFields.HierarchyName)">
-          <strong [ngSwitch]='organization.type'>
-            <ng-container *ngSwitchCase="'DEPARTMENT'">Department</ng-container>
-            <ng-container *ngSwitchCase="'AGENCY'">Agency</ng-container>
-            <ng-container *ngSwitchCase="'OFFICE'">Office</ng-container>:
-          </strong>
-          <ng-container *ngIf="organization.l2Name">{{ organization.l2Name }}</ng-container>
-        </li>
-        <ng-container *ngIf="errorOrganization">Organization ID: {{opportunity.data.organizationId}} NOTE: Complete Federal Hierarchy information is currently unavailable.</ng-container>
-        <li [attr.id]="generateID(opportunityFields.Location, 'header')" *ngIf="shouldBeDisplayed(opportunityFields.Location)">
-          <strong>Location: </strong>
-          <ng-container *ngIf="organization?.name">{{ organization.name }}</ng-container>
-        </li>
-      </ul>
+      
+      <div class="sam-ui padded raised segment">
+				<div class="sam-ui top right attached mini label">
+					Opportunity
+				</div>	
+				<div class="sam-ui attached grid">
+					<div class="column">		
+						<div class="sam-ui divided list">
+							<div class="item" [attr.id]="generateID(opportunityFields.Solicitation, 'header')" *ngIf="shouldBeDisplayed(opportunityFields.Solicitation)">
+								<div class="content">
+									<div class="header">
+										Solicitation Number
+									</div>
+									<div class="description">
+										{{ opportunity.data?.solicitationNumber }}
+									</div>
+								</div>
+							</div>
+							<div class="item" [attr.id]="generateID(opportunityFields.HierarchyName, 'header')" *ngIf="organization && shouldBeDisplayed(opportunityFields.HierarchyName)">
+								<div class="content">
+									<div class="header" [ngSwitch]='organization.type'>
+                    <ng-container *ngSwitchCase="'DEPARTMENT'">Department</ng-container>
+                    <ng-container *ngSwitchCase="'AGENCY'">Agency</ng-container>
+                    <ng-container *ngSwitchCase="'OFFICE'">Office</ng-container>
+									</div>
+									<div class="description">
+										<ng-container *ngIf="organization.l2Name">
+                      {{ organization.l2Name }}
+                    </ng-container>
+                    <ng-container *ngIf="errorOrganization">
+                      Organization ID: {{opportunity.data.organizationId}} NOTE: Complete Federal Hierarchy information is currently unavailable.
+                    </ng-container>
+									</div>
+								</div>
+							</div>
+              <div class="item" [attr.id]="generateID(opportunityFields.Location, 'header')" *ngIf="shouldBeDisplayed(opportunityFields.Location)">
+								<div class="content">
+									<div class="header">
+										Location
+									</div>
+									<div class="description">
+										<ng-container *ngIf="organization?.name">
+                      {{ organization.name }}
+                    </ng-container>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+      <div class="sam-ui hidden section divider"></div>
     </section>
 
+
     <div [class.hide]="selectedPage !== 0">
+      
       <section [attr.id]="generateID(opportunityFields.Award)" *ngIf="shouldBeDisplayed(opportunityFields.Award) && ready">
-        <h2>Award Details
-        <samButton *ngIf="differences?.changesExistAwardDetails" [buttonId]="'defaultBtnAwardDetails'" [buttonText]="!showChangesAwardDetails ? 'View Changes' : 'Hide Changes'" [buttonType]="btnType" (click)="showHideAwardDetails()"></samButton>
+        
+        <h2>
+          Award Details
+          <samButton *ngIf="differences?.changesExistAwardDetails" [buttonId]="'defaultBtnAwardDetails'" [buttonText]="!showChangesAwardDetails ? 'View Changes' : 'Hide Changes'" [buttonType]="btnType" (click)="showHideAwardDetails()"></samButton>
           <span *ngIf="showChangesAwardDetails" class="usa-font-lead m_B-2x usa-color-blue" [innerHTML]="differences?.postedDate"></span>
         </h2>
+        
         <ul class="usa-unstyled-list">
           <li [attr.id]="generateID(opportunityFields.AwardDate)" *ngIf="shouldBeDisplayed(opportunityFields.AwardDate)">
             <i *ngIf="differences?.awardDate" class="fa fa-square" aria-hidden="true"></i>
@@ -112,6 +152,7 @@
             <span *ngIf="showChangesAwardDetails && differences?.lineItemNumber" [attr.aria-label]= "differences?.lineItemNumberAria" [innerHTML]="differences?.lineItemNumber"></span>
           </li>
         </ul>
+        <div class="sam-ui hidden section divider"></div>
       </section>
 
       <section [attr.id]="generateID(opportunityFields.General)" *ngIf="shouldBeDisplayed(opportunityFields.General)">
@@ -121,8 +162,6 @@
 
           <span *ngIf="showChangesGeneral" class="usa-font-lead m_B-2x usa-color-blue" [innerHTML]="differences?.postedDate"></span>
         </h2>
-
-
 
         <ul class="usa-unstyled-list">
           <li [attr.id]="generateID(opportunityFields.Type, 'general')" *ngIf="shouldBeDisplayed(opportunityFields.Type)">
@@ -203,6 +242,7 @@
             <span *ngIf="showChangesGeneral && differences?.specialLegislation" [attr.aria-label]= "differences?.specialLegislationAria" [innerHTML]="differences?.specialLegislation"></span>
           </li>
         </ul>
+        <div class="sam-ui hidden section divider"></div>
       </section>
 
       <section [attr.id]="generateID(opportunityFields.Classification)" *ngIf="shouldBeDisplayed(opportunityFields.Classification)">
@@ -286,16 +326,16 @@
           </li>
           <span *ngIf="showChangesClassification && differences?.placeOfPerformance" [attr.aria-label]= "differences?.placeOfPerformanceAria" [innerHTML]="differences?.placeOfPerformance"></span>
         </ul>
+        <div class="sam-ui hidden section divider"></div>
       </section>
 
       <section [attr.id]="generateID(opportunityFields.Synopsis)" *ngIf="shouldBeDisplayed(opportunityFields.Synopsis) && opportunity.data?.descriptions[0]?.content">
-
         <h2>Synopsis
           <samButton *ngIf="differences?.changesExistSynopsis " [buttonId]="'defaultBtnSynopsis'" [buttonText]="!showChangesSynopsis ? 'View Changes' : 'Hide Changes'" [buttonType]="btnType" (click)="showHideSynopsis()"></samButton>
           <span *ngIf="showChangesSynopsis" class="usa-font-lead m_B-2x usa-color-blue" [innerHTML]="differences?.postedDate"></span>
         </h2>
         <!-- <samLabel *ngIf="differences?.description" [labelType]="'small'" [labelText]="' '"></samLabel> -->
-        <h3>
+        <h3 class="sam-ui dividing header">
           <i *ngIf="differences?.description" class="fa fa-square" aria-hidden="true"></i>
           <ng-container *ngIf="opportunity.data?.type === 'i'">Description of Benefits</ng-container>
           <ng-container *ngIf="opportunity.data?.type !== 'i'">Description</ng-container>
@@ -303,6 +343,7 @@
 
         <div *ngIf="!(showChangesSynopsis && differences?.description)" [innerHTML]="opportunity.data?.descriptions[0]?.content | fixhtml"></div>
         <div class="usa-changes" *ngIf="showChangesSynopsis && differences?.description" [attr.aria-label]= "differences?.descriptionAria" [innerHTML]="differences?.description"></div>
+        <div class="sam-ui hidden section divider"></div>
       </section>
 
 
@@ -316,7 +357,8 @@
         <ng-container *ngIf="packagesWarning">
           <samAlert [type]="packagesWarning.config?.type"><div [innerHTML]="packagesWarning.config?.description"></div></samAlert>
         </ng-container>
-        </section>
+        <div class="sam-ui hidden section divider"></div>
+      </section>
 
 
       <section [attr.id]="generateID(opportunityFields.Contact)" *ngIf="shouldBeDisplayed(opportunityFields.Contact)">
@@ -326,7 +368,7 @@
         </h2>
         <div class="usa-grid-full">
           <div class="usa-width-one-whole m_B-4x" [attr.id]="generateID(opportunityFields.Office, 'contact')" *ngIf="shouldBeDisplayed(opportunityFields.Office)">
-            <h3>
+            <h3 class="sam-ui dividing header">
               <i *ngIf="differences?.contractingOfficeAddress" class="fa fa-square" aria-hidden="true"></i>
               Contracting Office Address:
             </h3>
@@ -348,9 +390,11 @@
             <span *ngIf="showChangesContactInformation && differences?.contractingOfficeAddress" [attr.aria-label]= "differences?.contractingOfficeAddressAria" [innerHTML]="differences?.contractingOfficeAddress"></span>
           </div>
         </div>
+        <div class="sam-ui hidden divider"></div>
+        
         <div class="usa-grid-full">
           <div class="usa-width-one-half" [attr.id]="generateID(opportunityFields.POC, 'contact-primary')" *ngIf="shouldBeDisplayed(opportunityFields.POC)">
-            <h3>
+            <h3 class="sam-ui dividing header">
               <i *ngIf="differences?.primaryPointOfContact" class="fa fa-square" aria-hidden="true"></i>
               Primary Point of Contact
             </h3>
@@ -389,7 +433,7 @@
             </ul>
           </div>
           <div class="usa-width-one-half" [attr.id]="generateID(opportunityFields.POC, 'contact-secondary')" *ngIf="shouldBeDisplayed(opportunityFields.POC)">
-            <h3>
+            <h3 class="sam-ui dividing header">
               <i *ngIf="differences?.secondaryPointOfContact" class="fa fa-square" aria-hidden="true"></i>
               Secondary Point of Contact
             </h3>
@@ -428,6 +472,7 @@
             </ul>
           </div>
         </div>
+        <div class="sam-ui hidden section divider"></div>
       </section>
 
 
@@ -446,36 +491,49 @@
 
         <!-- Awards Metadata -->
 
-        <div *ngIf="relatedOpportunitiesMetadata"  class="usa-grid-full usa-text-center">
+        <div *ngIf="relatedOpportunitiesMetadata"  class="usa-grid-full">
 
-          <div class="usa-width-one-fourth segment">
-            <strong>Total Number of Awards</strong>
-            <p>
-              {{relatedOpportunitiesMetadata.count}}
-            </p>
+          <div class="usa-width-three-fourths">
+            
+            <div class="sam-ui three column grid center aligned">
+              <div class="stretched row">
+                <div class="column">
+                  <div class="sam-ui grey inverted segment">
+                    <div class="sam-ui medium header">Total Number of Awards</div>
+                    <div class="sam-ui medium header">
+                      {{relatedOpportunitiesMetadata.count}}
+                    </div>
+                  </div>
+                </div>
+                <div class="column">
+                  <div class="sam-ui grey inverted segment">
+                    <div class="sam-ui medium header">Total Amount Awarded</div>
+                    <div class="sam-ui medium header">
+                      {{relatedOpportunitiesMetadata.totalAwardAmt | currency:'USD':true:'1.2-2'}}
+                    </div>
+                    <em *ngIf="relatedOpportunitiesMetadata.unparsableCount > 0">
+                      (Plus {{relatedOpportunitiesMetadata.unparsableCount}} other variable amounts)
+                    </em>
+                  </div>
+                </div>
+                <div class="column">
+                  <div class="sam-ui grey inverted segment">
+                    <div class="sam-ui medium header">Total Number of Recipients</div>
+                    <div class="sam-ui medium header">
+                      {{relatedOpportunitiesMetadata.recipientCount}}
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
           </div>
 
-          <div class="usa-width-one-fourth segment">
-            <strong>Total Amount Awarded</strong>
-            <p>
-              {{relatedOpportunitiesMetadata.totalAwardAmt | currency:'USD':true:'1.2-2'}}<br>
-              <em *ngIf="relatedOpportunitiesMetadata.unparsableCount > 0" class="usa-text-small">
-                (Plus {{relatedOpportunitiesMetadata.unparsableCount}} other variable amounts)
-              </em>
-            </p>
-          </div>
-
-          <div class="usa-width-one-fourth segment">
-            <strong>Total Number of Recipients</strong>
-            <p>
-              {{relatedOpportunitiesMetadata.recipientCount}}
-            </p>
-          </div>
-
-          <div class="usa-width-one-fourth segment-with-select">
+          <div class="usa-width-one-fourth">
             <strong>Sort by</strong>
             <samSelect class="sort-select" [(model)]="awardSort" [options]="awardSortOptions" [name]='awardSort' (modelChange)="reloadRelatedOpportunities()"></samSelect>
           </div>
+          
         </div>
 
         <p class="m_T-2x" style="text-align: right;" *ngIf="relatedOpportunitiesMetadata">
@@ -491,40 +549,47 @@
 
 
         <div id="awards-list" tabindex="-1">
-          <div class="card-simple" *ngFor="let element of relatedOpportunities" tabindex="0">
+          <div class="sam-ui vertical padded segment" *ngFor="let element of relatedOpportunities" tabindex="0">
 
-            <h3>{{element.data?.award?.awardee?.name}}</h3>
+            <h3 class="sam-ui header">
+              {{element.data?.award?.awardee?.name}}
+            </h3>
 
-            <div class="card-simple-content">
-              <div class="usa-grid-full">
-                <div class="usa-width-one-half">
-                  <ul class="usa-label-list">
-                    <li><span>Contractor Awarded DUNS: </span>
-                      <span>
-                        {{element.data?.award?.awardee?.duns}}
-                      </span>
-                    </li>
-                    <li>
-                      <span>Contractor Awarded Address: </span>
-                      <span style="display: block;">
-                        {{element.data?.award?.awardee?.location?.streetAddress}}
-                        {{element.data?.award?.awardee?.location?.city}}
-                        {{element.data?.award?.awardee?.location?.state}}
-                        {{element.data?.award?.awardee?.location?.zip}}
-                        {{element.data?.award?.awardee?.location?.country}}
-                      </span>
-                    </li>
-                  </ul>
-                </div>
-                <div class="usa-width-one-half">
-                  <ul class="usa-label-list">
-                    <li><span>Contract Award Dollar Amount: </span> <span>{{element.data?.award?.amount}}</span></li>
-                    <li><span>Contract Award Number: </span> <span>{{element.data?.award?.number}}</span></li>
-                    <li><span>Contract Award Date: </span> <span>{{element.data?.award?.date | dateFormat: 'MMM DD, YYYY'}}</span></li>
-                  </ul>
-                </div>
+            <div class="usa-grid-full">
+              <div class="usa-width-one-half">
+                <ul class="sam-ui list">
+                  <li class="item">
+                    <strong>Contractor Awarded DUNS</strong><br>
+                    {{element.data?.award?.awardee?.duns}}
+                  </li>
+                  <li class="item">
+                    <strong>Contractor Awarded Address</strong><br>
+                    {{element.data?.award?.awardee?.location?.streetAddress}}
+                    {{element.data?.award?.awardee?.location?.city}}
+                    {{element.data?.award?.awardee?.location?.state}}
+                    {{element.data?.award?.awardee?.location?.zip}}
+                    {{element.data?.award?.awardee?.location?.country}}
+                  </li>
+                </ul>
+              </div>
+              <div class="usa-width-one-half">
+                <ul class="sam-ui list">
+                  <li class="item">
+                    <strong>Contract Award Dollar Amount</strong> <br>
+                    {{element.data?.award?.amount}}
+                  </li>
+                  <li class="item">
+                    <strong>Contract Award Number</strong> <br>
+                    {{element.data?.award?.number}}
+                  </li>
+                  <li class="item">
+                    <strong>Contract Award Date</strong> <br>
+                    {{element.data?.award?.date | dateFormat: 'MMM DD, YYYY'}}
+                  </li>
+                </ul>
               </div>
             </div>
+            
           </div>
         </div>
 
