--- a/src/styles/sam-ui/elements/_header.scss
+++ b/src/styles/sam-ui/elements/_header.scss
@@ -57,7 +57,7 @@ $nextParagraphDistance: 0em;
 /* Sizing */
 $hugeFontSize   : strip-units($h1) * 1em;
 $largeFontSize  : strip-units($h2) * 1em;
-$mediumFontSize : strip-units($h3) * 1em;
+$mediumFontSize : 1.2em;
 $smallFontSize  : strip-units($h4) * 1em;
 $tinyFontSize   : strip-units($h5) * 1em;
 
